--- a/conf.d/02-ctf.yaml
+++ b/conf.d/02-ctf.yaml
@@ -1,16 +1,6 @@
-origin: https://b01lersc.tf
+origin: https://squ1rrel.dev
 divisions:
   open: Open
-  purdue: Purdue
-divisionACLs:
-  - match: domain
-    value: purdue.edu
-    divisions:
-      - purdue
-      - open
-  - match: any
-    value: ''
-    divisions:
-      - open
-startTime: 1712962800000
-endTime: 1713135600000
+  student: Student
+startTime: 1714842000000
+endTime: 1715014800000
